# AIMO3

./: README.md  main.py  prompt0.md  prompt1.md  prompt2.md  pyproject.toml  submission.csv  submission.py  submission_mem.csv  submission_no_mem.csv
aimo3/: __init__.py  __main__.py  aas.py  actions.py  arm.py  aspr.py  avm.py  baa.py  belief.py  budget.py  ced.py  cli.py  config.py  controller.py  debug.py  diagnostics.py  disambiguate.py  esmp.py  fallback.py  generator.py  hard_mode.py  hypothesis.py  kaggle_predict.py  kaggle_server.py  llm.py  memory.py  models.py  parser.py  parsing.py  rde.py  router.py  runtime.py  sandbox.py  symbolic.py  types.py  utils.py  verifier.py
docs/: ARCHITECTURE.md  COMPETITION_STRATEGY.md  CONFIG_REFERENCE.md  KAGGLE_SUBMISSION.md  RUNBOOK_LOCAL.md  TECHNICAL_DOCUMENTATION.md  TRAINING_PIPELINE.md  TROUBLESHOOTING.md
runs/: 0e644e.json  26de63.json  424e18.json  42d360.json  641659.json  86e8e5.json  92ba6a.json  9c1c5f.json  a295e9.json  dbg1.json  dbg_verify.json  dd7f5e.json  demo.json  demo_mem.json  id0.json  m1.json  selfplay-0.json  selfplay-1.json  selfplay-10.json  selfplay-11.json  selfplay-12.json  selfplay-13.json  selfplay-14.json  selfplay-15.json  selfplay-16.json  selfplay-17.json  selfplay-18.json  selfplay-19.json  selfplay-2.json  selfplay-3.json  selfplay-4.json  selfplay-5.json  selfplay-6.json  selfplay-7.json  selfplay-8.json  selfplay-9.json  smoke.json  smoke2.json  t0.json  x1.json
scripts/: prepare_kaggle_bundle.sh  run_solver.py  run_training_pipeline.py  smoke_local.py
tests/: test_aas.py  (+6 more)
(+17 files in other folders)
