[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimo3-system"
version = "0.1.0"
description = "AIMO3 belief-state research system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "polars>=1.0",
]

[project.optional-dependencies]
math = ["sympy>=1.13"]
train = ["scikit-learn>=1.4"]
test = ["pytest>=8.0"]
inference = [
  "torch>=2.4",
  "transformers>=4.45",
  "accelerate>=1.0",
  "vllm>=0.16,<0.17",
  "protobuf<5",
]

[tool.setuptools]
packages = ["aimo3", "aimo3.policies", "aimo3.training"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
