[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimo3"
version = "0.1.0"
description = "End-to-end open-weight AIMO3 solving system (training + inference)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
solver = [
  "sympy>=1.12",
  "pandas>=2.2.0",
  "polars>=1.0.0",
]
runtime = [
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
aimo3 = "aimo3.cli:main"
aimo3-train = "aimo3.training.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimo3*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
